--- a/todo
+++ b/todo
@@ -1,7 +1,1 @@
-NOTE: right now we have `expressions_extra`.
-      which is `Range(Index(Expression))`, while it could be removed if 
-      expression return an `Expression` instead `Index(Expression)`
-      but there's compiler bug with unions and wasn't able to reproduce it
-      with an small example.
-
-      NOTE: another workaround is always using ReleaseFast or ReleaseSmall
+- zig parser returns null_node instead ? for optional parse functions
